# scidb

./: .gitignore  CLAUDE.md  README.md  dev-install.sh  gui_test_data.py  run_tests.sh  test.duckdb.wal  test.layout.json  test.wal  test_gui.duckdb.wal  test_gui.layout.json  tmp.py
.claude/: aggregation-mode-fix.md  comprehensive-logging-plan.md  create-variable-gui.md  defer-function-hash-staleness.md  fix-manual-function-outputs.md  gui-layered-architecture-plan.md  gui-refactor-plan.md  lineage-fcn-pipeline-metadata.md  matlab-expected-combos-fix.md  matlab-gui-support.md  matlab-run-and-reveal-fixes.md  matlab-state-fix.md  node-state-deep-propagation.md  pathinput-cartesian-fix.md  plan-pathinput-node.md  plan-scifor-foreach-split.md  plan-scifor.md  project-library-structure.md  settings.local.json
.github/workflows/: publish.yml
docs/: README_old.md  api.md
docs/api/: database.md  for-each.md  index.md
docs/claude/: config-file-formats.md  each-of-variant-expansion.md  gui-vscode-extension.md  lineage-design.md  matlab-gui-implementation.md  matlab-output-name-vs-variable-type.md  matlab-path-resolution.md  phase-8-startup-diagnostics.md  project-library-structure.md  (+1 more)
examples/: benchmark_batch_save.py
scidb-net/: README.md
scifor/: README.md
scihist-lib/: README.md
scistack/: README.md  pyproject.toml
scistack-gui/: package-lock.json
scistack/src/scistack/: __init__.py  __main__.py  project.py  user_config.py  uv_wrapper.py
scistack/tests/: conftest.py  test_project.py  test_user_config.py  test_uv_wrapper.py
thunk-lib/: README.md
(+239 files in other folders)
