[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scistack"
version = "0.1.0"
description = "Project & environment tooling for the SciStack scientific pipeline framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "scidb>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "tomli>=2.0.0 ; python_version < '3.11'",
]

[project.scripts]
scistack = "scistack.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scistack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
